--- a/businessTransfers/package.json
+++ b/businessTransfers/package.json
@@ -25,15 +25,16 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "enhanced-resolve": "^3.3.0",
     "font-awesome": "^4.7.0",
     "rxjs": "^5.1.0",
     "tether": "^1.4.1",
     "web-animations-js": "^2.3.1",
-    "webpack": "^3.8.1",
-    "zone.js": "^0.8.4"
+    "webpack": "^3.1.0",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "^1.5.0",
+    "@angular/cli": "^1.2.6",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "2.5.45",
